MiniTriangle.jj

options {
    STATIC = false;
}


PARSER_BEGIN(MiniTriangle)

import java.io.File;
import java.io.FileNotFoundException;

import java.io.BufferedWriter;
import java.io.FileWriter;
import java.io.IOException;

import java.util.ArrayList;
import java.util.List;
import java.util.HashMap;
import java.util.Map;

public class MiniTriangle {

  public static String CAMINHO_ARQUIVO = "resultados.mt.txt";

  // contador das regras de producao
  public int contadorProgram = 0;
  public int contadorCommand = 0;
  public int contadorSingleCommand = 0;
  public int contadorExpression = 0;
  public int contadorPrimaryExpression = 0;
  public int contadorDeclaration = 0;
  public int contadorSingleDeclaration = 0;
  public int contadorTypeDenoter = 0;
  public int contadorIntegerLiteral = 0;
  
  public int contadorOperator = 0;
  public List<String > listaOperators = new ArrayList<String>();
  public int contadorAssignmentOperator = 0;
  public int contadorTypeAnnotation = 0;
  
  public int contadorIdentificadores = 0;
  public List<String> listaIdentificadores = new ArrayList<String>();

  public Map<String, List<String>> tabelaVariaveis = new HashMap<String, List<String>>();

  public int contadorCondicionais = 0;
  public int contadorLoops = 0;
  public int contadorDeclaracoesConst = 0;
  public int contadorDeclaracoesVar = 0;

  public boolean temProgram = false;
  public boolean temCommand = false;
  public boolean temSingleCommand = false;
  public boolean temExpression = false;
  public boolean temPrimaryExpression = false;
  public boolean temDeclaration = false;
  public boolean temSingleDeclaration = false;
  public boolean temTypeDenoter = false;
  public boolean temIntegerLiteral = false;
  public boolean temOperator = false;

    public static void main(String[] args) {

		MiniTriangle parser;

		try {

			if (args.length > 0) {

				String filename = args[0];
				parser = new MiniTriangle(new java.io.FileInputStream(filename));
				

				System.out.println("\n===\tGERANDO PARSER\t===\n");
				System.out.println("\tParser do programa: " + filename);
		
			} else {

        		System.out.println("Digite um programa Mini-Triangle e aperte Enter + Ctrl+D (ou Ctrl+Z): ");
        		
				parser = new MiniTriangle(System.in);
				
				
			}

			parser.Iniciar();

		} catch (FileNotFoundException ex) {

			System.err.println("Erro: O arquivo especificado não foi encontrado.");
			
		} catch (ParseException ex) {

			System.err.println("\nErro de sintaxe: " + ex.getMessage());
			
		} catch (TokenMgrError ex) {

			System.err.println("\nErro lexico (Caracter invalido): " + ex.getMessage());
			
		} catch (Exception ex) {

			System.err.println("\nErro inesperado: " + ex.getMessage());
			
		}
        
    }

    public boolean possuiTodasAsProducoes() {

      	return 
	    temProgram &&
		temCommand &&
		temSingleCommand &&
		temExpression &&
		temPrimaryExpression &&
		temDeclaration &&
		temSingleDeclaration &&
		temTypeDenoter &&
		temIntegerLiteral &&
		temOperator;
    }

    public String booleanParaSimNao(boolean expressao) {
		return expressao ? "Sim" : "Não";
    }

    public void detalharResultados() {

		BufferedWriter bw = null;
		
		try {

		  	bw = new BufferedWriter(new FileWriter(CAMINHO_ARQUIVO, false));

			// titulo
			bw.write("RESULTADOS DO PARSER");
			bw.newLine();

			// regras de produção
			bw.write("Possui todas as regras de produção: " + possuiTodasAsProducoes());
			bw.newLine();
			bw.write("\tTem 'Command': " + booleanParaSimNao(temCommand));
			bw.newLine();
			bw.write("\tTem 'Single Command': " + booleanParaSimNao(temSingleCommand));
			bw.newLine();
			bw.write("\tTem 'Expression': " + booleanParaSimNao(temExpression));
			bw.newLine();
			bw.write("\tTem 'Primary Expression': " + booleanParaSimNao(temPrimaryExpression));
			bw.newLine();
			bw.write("\tTem 'Declaration': " + booleanParaSimNao(temDeclaration));
			bw.newLine();
			bw.write("\tTem 'Single Declaration': " + booleanParaSimNao(temSingleDeclaration));
			bw.newLine();
			bw.write("\tTem 'Type Denoter': " + booleanParaSimNao(temTypeDenoter));
			bw.newLine();
			bw.write("\tTem 'Integer Literal': " + booleanParaSimNao(temIntegerLiteral));
			bw.newLine();
			bw.write("\tTem 'Operator': " + booleanParaSimNao(temOperator));
			bw.newLine();
			
		} catch (IOException ex) {
			System.err.println("\nErro na escrita do arquivo: " + ex.getMessage());
		} finally {
			if (bw != null) {
				try {
					bw.close();
				} catch (IOException ex) {
					System.err.println("Erro ao fechar o recurso de escrita: " + ex.getMessage());
				}
			}
		}

    }

}

PARSER_END(MiniTriangle)


// TOKENS

SKIP : {
    " " | "\t" | "\n" | "\r"
}

// COMENTÁRIO
SPECIAL_TOKEN : {
	< SINGLE_LINE_COMMENT : "!" (~["\n", "\r"])* ("\n" | "\r" | "\r\n")? >
}

// TERMINAIS
TOKEN : {
  	< PROGRAM : "program" >
    | < BEGIN : "begin" >
    | < CONST : "const" >
    | < DO : "do" >
    | < ELSE : "else" >
    | < END : "end" >
    | < IN : "in" >
    | < LET : "let" >
    | < IF : "if" >
    | < THEN : "then" >
    | < VAR : "var" >
    | < WHILE : "while" >
}

// TIPOS DE DADOS
TOKEN : {
	< INTEGER : "int" | "integer">
	| < STRING : "str" | "string" >
	| < FLOAT : "float" >
	| < BOOLEAN : "bool" | "boolean" >
}

// SEPARADORES
TOKEN : {
    < LPAREN : "(">
    | < RPAREN : ")" >
    | < SEMICOLON : ";" >
    |  < COMMA : "," >
}

// OPERADORES
TOKEN : {
    < SLASH : "/" >
    | < LT : "<" >
    | < GT : ">">
    | < COLON : ":" >
    | < PLUS : "+" >
    | < ASSIGN : ":=" >
    | < TILDE : "~" >
    | < MINUS : "-" >
    | < EQ : "=" >
    | < STAR : "*">
    | < BSLASH : "\\" >
}


// GERAIS
TOKEN : {
    < IDENTIFIER : (["a"-"z", "A"-"Z"])+ (["a"-"z", "A"-"Z", "0"-"9"])*
//    <LETTER> ( <LETTER> )*
//            | <DIGIT> ( <DIGIT> )*
    >
    | < DIGIT : (["0"-"9"])
//    + ("." (["0"-"9"])+)?
	>
    | < LETTER : (["a"-"z", "A"-"Z"])+>
}



// INÍCIO
void Iniciar() : {}
{
    Program()

    {

		System.out.println("Possui todas as regras de produção: " + (possuiTodasAsProducoes() ? "Sim" : "Não"));
		System.out.println("Inicia com 'Program': " + (contadorProgram == 1 ? "Sim" : "Não"));

		System.out.println("Quantidade de 'Command': " + contadorCommand);
		System.out.println("Quantidade de 'SingleCommand': " + contadorSingleCommand);
		System.out.println("Quantidade de 'Expression': " + contadorExpression);
		System.out.println("Quantidade de 'PrimaryExpression': " + contadorPrimaryExpression);
		System.out.println("Quantidade de 'Declaration': " + contadorDeclaration);
		System.out.println("Quantidade de 'SingleDeclaration': " + contadorSingleDeclaration);
		System.out.println("Quantidade de 'TypeDenoter': " + contadorTypeDenoter);
		System.out.println("Quantidade de 'IntegerLiteral': " + contadorIntegerLiteral);
		System.out.println("Quantidade de 'Operator': " + contadorOperator);

		System.out.println("Lista de Operadores: " + listaOperators);

		System.out.println("Quantidade de 'Assignment Operator': " + contadorAssignmentOperator);
		System.out.println("Quantidade de 'Type Annotation': " + contadorTypeAnnotation);

		System.out.println("Quantidade de Condicionais: " + contadorCondicionais);
		System.out.println("Quantidade de Loops: " + contadorLoops);
      
		System.out.println("Identificadores: " + contadorIdentificadores);
		System.out.println("Declarações:\n-- Const: " + contadorDeclaracoesConst + "\n-- Var: " + contadorDeclaracoesVar);

		System.out.println("Quantidade de Identificadores Únicos: " + listaIdentificadores.size());
		System.out.println("Lista de Identificadores Únicos: " + listaIdentificadores);

		System.out.println("\n\nTabela de Variaveis:");
		for (String tipo : tabelaVariaveis.keySet()) {
			System.out.println("* " + tipo + ": ");

			System.out.println(tabelaVariaveis.get(tipo));
		}

		detalharResultados();
    }
}


/*
<Program> ::= <single-Command>
*/
void Program() : {
	Token token;
}
{
    ( < PROGRAM > token = < IDENTIFIER >
    {

      	temProgram = true;
      	
      	contadorProgram++;
    		contadorIdentificadores++;

    		if (!listaIdentificadores.contains(token.image)) {
			listaIdentificadores.add(token.image);
    		}
    }
    )? Command()
    {
      	temCommand = true;
      	contadorCommand++;
    }

    <EOF>
}


/*
<Command> ::= <single-Command>
		| <Command> “;” <single-Command>
*/
void Command() : {}
{
    SingleCommand()
	    {
	      temSingleCommand = true;
	      contadorSingleCommand++;
	    }

    ( <SEMICOLON> SingleCommand()
	    	{
	      	contadorSingleCommand++;
	    }
    )*
}


/*
<single-Command> ::=
			<V-name> := <Expression>
			| <Identifier> “(“ <Expression> “)”
			| IF <Expression>
			  THEN <single-Command>
			  ELSE <single-Command>
			| WHILE <Expression>
			  DO <single-command>
			| LET <Declaration>
			  IN <single-Command>
			| BEGIN <Command> END
*/
void SingleCommand() : {
	Token token;
}
{

    // <V-name> := <Expression>
    LOOKAHEAD(2) token = <IDENTIFIER> 
		{
		    	contadorIdentificadores++;
		
		    	if (!listaIdentificadores.contains(token.image)) {
					listaIdentificadores.add(token.image);
		    	}
	    }
	    
    	AssignmentOperator() Expression()
			{
		      	temExpression = true;
		      	contadorExpression++;
		    }
    
    // <Identifier> "(" <Expression> ")"
    | token = <IDENTIFIER> 
		{
		    	contadorIdentificadores++;
		
		    	if (!listaIdentificadores.contains(token.image)) {
					listaIdentificadores.add(token.image);
		    	}
	    }
    <LPAREN> ( Expression()
	    {
	      	temExpression = true;
			contadorExpression++;
	    }
		( < COMMA > Expression() { contadorExpression++; } )* )?
	<RPAREN>

    /*
    IF <Expression>
    THEN <single-Command>
    ELSE <single-Command>
    */
    | <IF> Expression()
    		{
    		  	temExpression = true;
    		  	contadorExpression++;
    		}
    		<THEN>
    			SingleCommand()
    			{
    			  	temSingleCommand = true;
    			  	contadorSingleCommand++;
    			}
        <ELSE>
        		SingleCommand()
	        {
		        	contadorSingleCommand++;
		        	contadorCondicionais++;
	        }

    /*
    WHILE <Expression>
    DO <single-Command>
    */
    | <WHILE> Expression()
    		{
    		  	temExpression = true;
    		  	contadorExpression++;
    		}
        <DO> SingleCommand()
	        {
	          	temSingleCommand = true;
		        	contadorSingleCommand++;
		        	contadorLoops++;
	        }

    /*
    LET <Declaration>
    IN <single-Command>
    */
    | <LET>
    			Declaration()
    			{
    			  	temDeclaration = true;
    			  	contadorDeclaration++;
    			}
        <IN>
        		SingleCommand()
        		{
        		  	temSingleCommand = true;
        		  	contadorSingleCommand++;
        		}

    // BEGIN <Command> END
    | <BEGIN>
    			Command()
    			{
    			  	temCommand = true;
    			  	contadorCommand++;
    			}
    		<END>
}

/*
<Expression> ::= <primary-Expression>
		| <Expression> <Operator>
					<primary-Expression>
*/
void Expression() : {}
{
  	< LPAREN >
		PrimaryExpression()
    		{
    		  	temPrimaryExpression = true;
    		  	contadorPrimaryExpression++;
    		}
    		( Operator() PrimaryExpression() { contadorPrimaryExpression++; } )*
  	<RPAREN >

 	|

    PrimaryExpression()
    		{
    		  	temPrimaryExpression = true;
    		  	contadorPrimaryExpression++;
    		}
    		( Operator() PrimaryExpression()
    			{
    			  	temPrimaryExpression = true;
    			  	contadorPrimaryExpression++;
    			}
    		)*
}


/*
<primary-expression> ::= <Integer-Literal>
			| <V-name>
			| <Operator> <primary-Expression>
*/
void PrimaryExpression() : {
	Token token;
}
{

    ( Operator() )* // evitar a recursao

    (
        IntegerLiteral()
	        {
	          	temIntegerLiteral = true;
	          	contadorIntegerLiteral++;
	        }
        | token = <IDENTIFIER>
			{
		    	contadorIdentificadores++;
		
		    	if (!listaIdentificadores.contains(token.image)) {
					listaIdentificadores.add(token.image);
		    	}
    		} // <V-name>
    )
}


/*
<Declaration> ::= <single-Declaration>
		| <Declaration> “;” <single-Declaration>
*/
void Declaration() : {}
{
    SingleDeclaration()
	    {
	      	temSingleDeclaration = true;
	      	contadorSingleDeclaration++;
	    }
	    ( <SEMICOLON> SingleDeclaration()
	    		{
	    		  	contadorSingleDeclaration++;
	    		}
	    	)*
}


/*
<single-Declaration> ::= 
		CONST <Identifier> “~” <Expression>
		| VAR <Identifier> “:” <Type-denoter>
*/
void SingleDeclaration() : {
	Token token;
	String tipoVar;
}
{
    <CONST>
    		{
    		  	contadorDeclaracoesConst++;
    		}

    		token = <IDENTIFIER>
	    {
		    	contadorIdentificadores++;
		
		    	if (!listaIdentificadores.contains(token.image)) {
					listaIdentificadores.add(token.image);
		    	}
	    }
	    AssignmentOperator() Expression()
	    		{
	    		  	contadorExpression++;
	    		}

    |
    <VAR>
    {
      	contadorDeclaracoesVar++;
    } token = <IDENTIFIER> 
		{
		    	contadorIdentificadores++;
		
		    	if (!listaIdentificadores.contains(token.image)) {
					listaIdentificadores.add(token.image);
		    	}
	    }

	    TypeAnnotation() tipoVar = TypeDenoter()
		    {
		      	temTypeDenoter = true;
			    	contadorTypeDenoter++;
			
			    	if (!tabelaVariaveis.containsKey(tipoVar)) {
						tabelaVariaveis.put(tipoVar, new ArrayList<String>());
			    	}
			
			    	tabelaVariaveis.get(tipoVar).add(token.image);
		    }
}

void TypeAnnotation() : { }
{
	< COLON >
		{
		  	contadorTypeAnnotation++;
		}
}


/*
<Type-denoter> ::= <Identifier>
*/
String TypeDenoter() : {
	Token token;
}
{
  	token = <INTEGER> // <IDENTIFIER>
	  	{
	  	 	contadorIdentificadores++;
	
	  	 	if (!listaIdentificadores.contains(token.image)) {
				listaIdentificadores.add(token.image);
	  	 	}
	
	  	 	return token.image;
	  	}

	| token = <STRING>
		{
	  	 	contadorIdentificadores++;
	
	  	 	if (!listaIdentificadores.contains(token.image)) {
				listaIdentificadores.add(token.image);
	  	 	}
	
	  	 	return token.image;
	  	}

	| token = <FLOAT>
		{
	  	 	contadorIdentificadores++;
	
	  	 	if (!listaIdentificadores.contains(token.image)) {
				listaIdentificadores.add(token.image);
	  	 	}
	
	  	 	return token.image;
	  	}

	| token = <BOOLEAN>
		{
	  	 	contadorIdentificadores++;
	
	  	 	if (!listaIdentificadores.contains(token.image)) {
				listaIdentificadores.add(token.image);
	  	 	}
	
	  	 	return token.image;
	  	}
		
}


/*
<Integer-Literal> ::= <Digit>
		| <Integer-Literal> <Digit>
*/
void IntegerLiteral() : {}
{
    <DIGIT> ( <DIGIT> )*
    {
      	temIntegerLiteral = true;
    }
}

void AssignmentOperator() : { }
{
  	< ASSIGN >
	  	{
	  	  	contadorAssignmentOperator++;
	  	}
 	| < TILDE >
	 	{
	 	  	contadorAssignmentOperator++;
	 	}
}

void Operator() : {
} 
{
    <LT>
    	{
    		contadorOperator++;
    		temOperator = true;
    	}
    | <GT>
    	{
    		contadorOperator++;
    		temOperator = true;
    	}
    | <EQ>
    	{
    		contadorOperator++;
    		temOperator = true;
    	}
    | <PLUS>
    	{
    		contadorOperator++;
    		temOperator = true;
    	}
    | <MINUS>
    	{
    		contadorOperator++;
    		temOperator = true;
    	}
    | <STAR>
    	{
    		contadorOperator++;
    		temOperator = true;
    	}
    | <SLASH>
    	{
    		contadorOperator++;
    		temOperator = true;
    	}
    | <BSLASH>
    	{
    		contadorOperator++;
    		temOperator = true;
    	}

}
