MiniTriangle.java
/* Generated By:JavaCC: Do not edit this line. MiniTriangle.java */
import java.io.File;
import java.io.FileNotFoundException;

import java.io.BufferedWriter;
import java.io.FileWriter;
import java.io.IOException;

import java.util.ArrayList;
import java.util.List;
import java.util.HashMap;
import java.util.Map;

public class MiniTriangle implements MiniTriangleConstants {

  public static String CAMINHO_ARQUIVO = "resultados.mt.txt";

  // contador das regras de producao
  public int contadorProgram = 0;
  public int contadorCommand = 0;
  public int contadorSingleCommand = 0;
  public int contadorExpression = 0;
  public int contadorPrimaryExpression = 0;
  public int contadorDeclaration = 0;
  public int contadorSingleDeclaration = 0;
  public int contadorTypeDenoter = 0;
  public int contadorIntegerLiteral = 0;

  public int contadorOperator = 0;
  public int contadorAssignmentOperator = 0;
  public int contadorTypeAnnotation = 0;

  public int contadorIdentificadores = 0;
  public List<String> listaIdentificadores = new ArrayList<String>();

  public Map<String, List<String>> tabelaVariaveis = new HashMap<String, List<String>>();

  public int contadorCondicionais = 0;
  public int contadorLoops = 0;
  public int contadorDeclaracoesConst = 0;
  public int contadorDeclaracoesVar = 0;

  public boolean temProgram = false;
  public boolean temCommand = false;
  public boolean temSingleCommand = false;
  public boolean temExpression = false;
  public boolean temPrimaryExpression = false;
  public boolean temDeclaration = false;
  public boolean temSingleDeclaration = false;
  public boolean temTypeDenoter = false;
  public boolean temIntegerLiteral = false;
  public boolean temOperator = false;

    public static void main(String[] args) {

                MiniTriangle parser;

                try {

                        if (args.length > 0) {

                                String filename = args[0];
                                parser = new MiniTriangle(new java.io.FileInputStream(filename));


                                System.out.println("\n===\tGERANDO PARSER\t===\n");
                                System.out.println("\tParser do programa: " + filename);

                        } else {

                        System.out.println("Digite um programa Mini-Triangle e aperte Enter + Ctrl+D (ou Ctrl+Z): ");

                                parser = new MiniTriangle(System.in);


                        }

                        parser.Iniciar();

                } catch (FileNotFoundException ex) {

                        System.err.println("Erro: O arquivo especificado n\u00e3o foi encontrado.");

                } catch (ParseException ex) {

                        System.err.println("\nErro de sintaxe: " + ex.getMessage());

                } catch (TokenMgrError ex) {

                        System.err.println("\nErro lexico (Caracter invalido): " + ex.getMessage());

                } catch (Exception ex) {

                        System.err.println("\nErro inesperado: " + ex.getMessage());

                }

    }

    public boolean possuiTodasAsProducoes() {

        return
            temProgram &&
                temCommand &&
                temSingleCommand &&
                temExpression &&
                temPrimaryExpression &&
                temDeclaration &&
                temSingleDeclaration &&
                temTypeDenoter &&
                temIntegerLiteral &&
                temOperator;
    }

    public String booleanParaSimNao(boolean expressao) {
                return expressao ? "Sim" : "N\u00e3o";
    }

    public void exibirResultados() {

        System.out.println("Possui todas as regras de produ\u00e7\u00e3o: " + booleanParaSimNao(possuiTodasAsProducoes()));
                System.out.println("Inicia com 'Program': " + booleanParaSimNao(contadorProgram == 1));

                System.out.println("Quantidade de 'Command': " + contadorCommand);
                System.out.println("Quantidade de 'SingleCommand': " + contadorSingleCommand);
                System.out.println("Quantidade de 'Expression': " + contadorExpression);
                System.out.println("Quantidade de 'PrimaryExpression': " + contadorPrimaryExpression);
                System.out.println("Quantidade de 'Declaration': " + contadorDeclaration);
                System.out.println("Quantidade de 'SingleDeclaration': " + contadorSingleDeclaration);
                System.out.println("Quantidade de 'TypeDenoter': " + contadorTypeDenoter);
                System.out.println("Quantidade de 'IntegerLiteral': " + contadorIntegerLiteral);
                System.out.println("Quantidade de 'Operator': " + contadorOperator);

                System.out.println("Quantidade de 'Assignment Operator': " + contadorAssignmentOperator);
                System.out.println("Quantidade de 'Type Annotation': " + contadorTypeAnnotation);

                System.out.println("Quantidade de Condicionais: " + contadorCondicionais);
                System.out.println("Quantidade de Loops: " + contadorLoops);

                System.out.println("Identificadores: " + contadorIdentificadores);
                System.out.println("Declara\u00e7\u00f5es:\n-- Const: " + contadorDeclaracoesConst + "\n-- Var: " + contadorDeclaracoesVar);

                System.out.println("Quantidade de Identificadores \u00danicos: " + listaIdentificadores.size());
                System.out.println("Lista de Identificadores \u00danicos: " + listaIdentificadores);

                System.out.println("\n\nTabela de Variaveis:");
                for (String tipo : tabelaVariaveis.keySet()) {
                        System.out.println("* " + tipo + ": ");

                        System.out.println(tabelaVariaveis.get(tipo));
                }

    }

    public void detalharResultados() {

                BufferedWriter bw = null;

                try {

                        bw = new BufferedWriter(new FileWriter(CAMINHO_ARQUIVO, false));

                        // titulo
                        bw.write("\n================================\n");
                        bw.write("RESULTADOS DO PARSER");
                        bw.write("\n================================\n");
                        bw.newLine();

                        // regras de produção
                        bw.write("Possui todas as regras de produ\u00e7\u00e3o: " + possuiTodasAsProducoes());
                        bw.newLine();
                        bw.write("\tTem 'Command': " + booleanParaSimNao(temCommand));
                        bw.newLine();
                        bw.write("\tTem 'Single Command': " + booleanParaSimNao(temSingleCommand));
                        bw.newLine();
                        bw.write("\tTem 'Expression': " + booleanParaSimNao(temExpression));
                        bw.newLine();
                        bw.write("\tTem 'Primary Expression': " + booleanParaSimNao(temPrimaryExpression));
                        bw.newLine();
                        bw.write("\tTem 'Declaration': " + booleanParaSimNao(temDeclaration));
                        bw.newLine();
                        bw.write("\tTem 'Single Declaration': " + booleanParaSimNao(temSingleDeclaration));
                        bw.newLine();
                        bw.write("\tTem 'Type Denoter': " + booleanParaSimNao(temTypeDenoter));
                        bw.newLine();
                        bw.write("\tTem 'Integer Literal': " + booleanParaSimNao(temIntegerLiteral));
                        bw.newLine();
                        bw.write("\tTem 'Operator': " + booleanParaSimNao(temOperator));
                        bw.newLine();

                        bw.newLine();
                        bw.write("\n================================\n");
                        bw.write("Quantificadores:");
                        bw.newLine();
                        bw.write("\tQuantidade de 'Assignment Operator': " + contadorAssignmentOperator);
                        bw.newLine();
                        bw.write("\tQuantidade de 'Type Annotation': " + contadorTypeAnnotation);
                        bw.newLine();
                        bw.write("\tQuantidade de 'Express\u00f5es Condicionais': " + contadorCondicionais);
                        bw.newLine();
                        bw.write("\tQuantidade de 'Loops': " + contadorLoops);
                        bw.newLine();
                        bw.write("\t Quantidade de 'Declara\u00e7\u00f5es Const': " + contadorDeclaracoesConst);
                        bw.newLine();
                        bw.write("\tQuantidade de 'Declara\u00e7\u00f5es Var': " + contadorDeclaracoesVar);
                        bw.newLine();
                        bw.write("\tQuantidade de 'Identificadores' (Apari\u00e7\u00f5es): " + contadorIdentificadores);
                        bw.newLine();
                        bw.write("\tQuantidade de 'Identificadores' (\u00danicos): " + listaIdentificadores.size());
                        bw.newLine();
                        bw.write("\n================================\n");

                        bw.newLine();
                        bw.write("\n================================\n");
                        bw.write("Lista de Identificadores \u00danicos:");
                        bw.newLine();
                        // bw.write(listaIdentificadores);
                        for (String identificador : listaIdentificadores) {
                                bw.write("+ " + identificador);
                                bw.newLine();
                        }
                        bw.newLine();
                        bw.write("\n================================\n");

                        bw.newLine();
                        bw.write("\n================================\n");
                        bw.write("Tabela de Variaveis:");
                        bw.newLine();

                        for (String tipo : tabelaVariaveis.keySet()) {
                                bw.write("* " + tipo + ": ");
                                bw.newLine();

//				bw.write(tabelaVariaveis.get(tipo));
        //			bw.newLine();

                                for (String variavel : tabelaVariaveis.get(tipo)) {
                                        bw.write("\t" + variavel);
                                        bw.newLine();
                                }
                        }
                        bw.newLine();
                        bw.write("\n================================\n");

                } catch (IOException ex) {
                        System.err.println("\nErro na escrita do arquivo: " + ex.getMessage());
                } finally {
                        if (bw != null) {
                                try {
                                        bw.close();
                                } catch (IOException ex) {
                                        System.err.println("Erro ao fechar o recurso de escrita: " + ex.getMessage());
                                }
                        }
                }

    }

// INÍCIO
  final public void Iniciar() throws ParseException {
    Program();
                exibirResultados();
                detalharResultados();
  }

/*
<Program> ::= <single-Command>
*/
  final public void Program() throws ParseException {
        Token token;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PROGRAM:
      jj_consume_token(PROGRAM);
      token = jj_consume_token(IDENTIFIER);
        temProgram = true;

        contadorProgram++;
                contadorIdentificadores++;

                if (!listaIdentificadores.contains(token.image)) {
                        listaIdentificadores.add(token.image);
                }
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    Command();
        temCommand = true;
        contadorCommand++;
    jj_consume_token(0);
  }

/*
<Command> ::= <single-Command>
		| <Command> “;” <single-Command>
*/
  final public void Command() throws ParseException {
    SingleCommand();
              temSingleCommand = true;
              contadorSingleCommand++;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMICOLON:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      jj_consume_token(SEMICOLON);
      SingleCommand();
                contadorSingleCommand++;
    }
  }

/*
<single-Command> ::=
			<V-name> := <Expression>
			| <Identifier> “(“ <Expression> “)”
			| IF <Expression>
			  THEN <single-Command>
			  ELSE <single-Command>
			| WHILE <Expression>
			  DO <single-command>
			| LET <Declaration>
			  IN <single-Command>
			| BEGIN <Command> END
*/
  final public void SingleCommand() throws ParseException {
        Token token;
    if (jj_2_1(2)) {
      token = jj_consume_token(IDENTIFIER);
                        contadorIdentificadores++;

                        if (!listaIdentificadores.contains(token.image)) {
                                        listaIdentificadores.add(token.image);
                        }
      AssignmentOperator();
      Expression();
                        temExpression = true;
                        contadorExpression++;
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        token = jj_consume_token(IDENTIFIER);
                        contadorIdentificadores++;

                        if (!listaIdentificadores.contains(token.image)) {
                                        listaIdentificadores.add(token.image);
                        }
        jj_consume_token(LPAREN);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LPAREN:
        case SLASH:
        case LT:
        case GT:
        case PLUS:
        case MINUS:
        case EQ:
        case STAR:
        case BSLASH:
        case IDENTIFIER:
        case DIGIT:
          Expression();
                temExpression = true;
                        contadorExpression++;
          label_2:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case COMMA:
              ;
              break;
            default:
              jj_la1[2] = jj_gen;
              break label_2;
            }
            jj_consume_token(COMMA);
            Expression();
                                           contadorExpression++;
          }
          break;
        default:
          jj_la1[3] = jj_gen;
          ;
        }
        jj_consume_token(RPAREN);
        break;
      case IF:
        jj_consume_token(IF);
        Expression();
                        temExpression = true;
                        contadorExpression++;
        jj_consume_token(THEN);
        SingleCommand();
                                temSingleCommand = true;
                                contadorSingleCommand++;
        jj_consume_token(ELSE);
        SingleCommand();
                                contadorSingleCommand++;
                                contadorCondicionais++;
        break;
      case WHILE:
        jj_consume_token(WHILE);
        Expression();
                        temExpression = true;
                        contadorExpression++;
        jj_consume_token(DO);
        SingleCommand();
                        temSingleCommand = true;
                                contadorSingleCommand++;
                                contadorLoops++;
        break;
      case LET:
        jj_consume_token(LET);
        Declaration();
                                temDeclaration = true;
                                contadorDeclaration++;
        jj_consume_token(IN);
        SingleCommand();
                                temSingleCommand = true;
                                contadorSingleCommand++;
        break;
      case BEGIN:
        jj_consume_token(BEGIN);
        Command();
                                temCommand = true;
                                contadorCommand++;
        jj_consume_token(END);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

/*
<Expression> ::= <primary-Expression>
		| <Expression> <Operator>
					<primary-Expression>
*/
  final public void Expression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
      jj_consume_token(LPAREN);
      PrimaryExpression();
                        temPrimaryExpression = true;
                        contadorPrimaryExpression++;
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SLASH:
        case LT:
        case GT:
        case PLUS:
        case MINUS:
        case EQ:
        case STAR:
        case BSLASH:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_3;
        }
        Operator();
        PrimaryExpression();
                                                   contadorPrimaryExpression++;
      }
      jj_consume_token(RPAREN);
      break;
    case SLASH:
    case LT:
    case GT:
    case PLUS:
    case MINUS:
    case EQ:
    case STAR:
    case BSLASH:
    case IDENTIFIER:
    case DIGIT:
      PrimaryExpression();
                        temPrimaryExpression = true;
                        contadorPrimaryExpression++;
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SLASH:
        case LT:
        case GT:
        case PLUS:
        case MINUS:
        case EQ:
        case STAR:
        case BSLASH:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_4;
        }
        Operator();
        PrimaryExpression();
                                temPrimaryExpression = true;
                                contadorPrimaryExpression++;
      }
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/*
<primary-expression> ::= <Integer-Literal>
			| <V-name>
			| <Operator> <primary-Expression>
*/
  final public void PrimaryExpression() throws ParseException {
        Token token;
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SLASH:
      case LT:
      case GT:
      case PLUS:
      case MINUS:
      case EQ:
      case STAR:
      case BSLASH:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_5;
      }
      Operator();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DIGIT:
      IntegerLiteral();
                        temIntegerLiteral = true;
                        contadorIntegerLiteral++;
      break;
    case IDENTIFIER:
      token = jj_consume_token(IDENTIFIER);
                        contadorIdentificadores++;

                        if (!listaIdentificadores.contains(token.image)) {
                                        listaIdentificadores.add(token.image);
                        }
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }
